# Tiny3D

./: .gitignore  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CanvasTest.cpp  Instance.cpp  Instance.h  Line.cpp  Line.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Shapes.cpp  Shapes.h  Texture.cpp  Texture.h  Transformations.cpp  Transformations.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h  main.cpp  testfile.cpp  util.h
test/: CanvasTest.cpp  MatrixTest.cpp  TransformationTest.cpp  TriangleTest.cpp  VecTest.cpp
